tests/errors/test_division_by_zero_simple.mob
// Test division by zero error
print("Testing division by zero:");
var x = 5 / 0;
print("This should never print");

